--- a/WebSecurity/Pages/Shared/_Layout.cshtml
+++ b/WebSecurity/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -46,6 +49,6 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 </body>
 </html>
