--- a/WebSecurity/Pages/Account/Login.cshtml
+++ b/WebSecurity/Pages/Account/Login.cshtml
@@ -26,6 +26,13 @@
             </div>
             <span class="text-danger" asp-validation-for="Credential!.Password"></span>
         </div>
+        <div class="form-group row p-2">
+            <div class="col-5">
+                    <input type="checkbox" asp-for="Credential!.ShouldRememberMe" class="form-check-input"/>
+                    <label class="form-check-label" asp-for="Credential!.ShouldRememberMe"></label>
+            </div>
+        </div>
+
         <div class="form-group row">
             <div class="col-2 p-2">
                 <input type="submit" class="btn btn-primary" value="Login"/>
