--- a/WebAppIdentity/Pages/Account/Register.cshtml
+++ b/WebAppIdentity/Pages/Account/Register.cshtml
@@ -41,7 +41,7 @@
         <div class="col-2 p-2">
             <input type="submit" class="btn btn-primary" value="Register"/>
         </div>
-    </div>>
+    </div>
 </form>
 </div>
         
