--- a/WebAppIdentity/Pages/Shared/_Layout.cshtml
+++ b/WebAppIdentity/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     </li>
                 </ul>
             </div>
+            <div class="align-content-lg-end">
+                <partial name="_LoginStatusPartial"/>
+            </div>
         </div>
     </nav>
 </header>
