--- a/WebAppIdentity/Pages/Account/Register.cshtml
+++ b/WebAppIdentity/Pages/Account/Register.cshtml
@@ -37,6 +37,24 @@
         </div>
         <span class="text-danger" asp-validation-for="RegisterViewModel!.ConfirmPassword"></span>   
     </div>
+    <div class="form-group row p-2">
+        <div class="col-2">
+            <label asp-for="RegisterViewModel!.Department"></label>
+        </div>
+        <div class="col-5">
+            <input type="text" asp-for="RegisterViewModel!.Department" class="form-control"/>
+        </div>
+        <span class="text-danger" asp-validation-for="RegisterViewModel!.Department"></span>   
+    </div>
+    <div class="form-group row p-2">
+        <div class="col-2">
+            <label asp-for="RegisterViewModel!.Position"></label>
+        </div>
+        <div class="col-5">
+            <input type="text" asp-for="RegisterViewModel!.Position" class="form-control"/>
+        </div>
+        <span class="text-danger" asp-validation-for="RegisterViewModel!.Position"></span>   
+    </div>
     <div class="form-group row">
         <div class="col-2 p-2">
             <input type="submit" class="btn btn-primary" value="Register"/>
