--- a/WebAppIdentity/Pages/Shared/_Layout.cshtml
+++ b/WebAppIdentity/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="Account/UserProfile">User Profile</a>
+                    </li>
                 </ul>
             </div>
             <div class="align-content-lg-end">
